# patch-tracker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: update-and-deploy.yml
IntuneAssigner/: IntuneAssigner.Tests.ps1  IntuneAssigner.psd1  IntuneAssigner.psm1  README.md
IntuneAssigner/Private/: Directory.ps1  Report.ps1  Reports.ps1  Write.ps1
IntuneAssigner/Public/: Add-IntuneBulkAssignment.ps1  Compare-IntuneAssignment.ps1  Connect-IntuneAssigner.ps1  Copy-IntuneAssignment.ps1  Export-IntuneAssignmentReport.ps1  Export-IntuneAssignmentTemplate.ps1  Get-IntuneAssignment.ps1  Get-IntuneAssignmentAudit.ps1  Get-IntuneEffectiveAssignment.ps1  Get-IntuneGroupAssignment.ps1  Import-IntuneAssignmentTemplate.ps1  Start-IntuneAssigner.ps1
IntuneTide/: IntuneTide.Tests.ps1  IntuneTide.psd1  IntuneTide.psm1  README.md
IntuneTide/Private/: Backup.ps1  Directory.ps1  Graph.ps1  Inventory.ps1  Model.ps1  Operations.ps1  Pim.ps1  Report.ps1  Reports.ps1  Resources.ps1
IntuneTide/Public/: Backup-IntuneAssignment.ps1  Connect-IntuneTide.ps1  Enable-IntuneAdminRole.ps1  Export-IntuneExcel.ps1  Export-IntuneHtmlReport.ps1  Export-IntuneReport.ps1  Get-IntuneActiveRole.ps1  (+13 more)
docs/: intune-tool.md  intuneassigner.md
tests/: conftest.py  intune_fake.py  test_apple_sofa.py  test_cisa_kev.py  test_cli.py  test_db.py  test_intune_cli.py  test_intune_engine.py  test_intune_features.py  test_intune_unit.py  test_microsoft_msrc.py  test_nvd.py  test_patch_tuesday.py  test_priority.py  test_servicing_products.py  test_site.py
web/: app.js  data.json  index.html  styles.css
(+40 files in other folders)
